new hybrid added

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@ title: "Seal on the beach"
                         <div class="blog-grid">
                             <div class="blog-img">
                                 <a href="randoms/{{random.data.name}}">
-                                    <img src="/static/img/1000x650.jpg" title="" alt="">
+                                    <img src="{{random.data.image}}" title="" alt="">
                                 </a>
                             </div>
                             <div class="blog-info">
